--- a/index.html
+++ b/index.html
@@ -1,59 +1,68 @@
 <!doctype html>
 <html lang="vi">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Kiểm tra Camera & Micro (Có sóng âm động)</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Kiểm tra Camera & Micro - Test trực tiếp trên Web</title>
 <style>
-  body{
-    font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial;
-    background:#f7f8fa;
-    padding:18px;
-    color:#111;
-  }
-  h1{font-size:1.2rem;margin:0 0 12px}
-  select,button{
-    padding:8px 12px;border-radius:6px;border:1px solid #ccc;background:white;
-  }
+  body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial;line-height:1.4;padding:18px;background:#f7f7f9;color:#111}
+  h1{font-size:1.2rem;margin:0 0 10px}
+  .row{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:10px}
+  select,button{padding:8px;border-radius:6px;border:1px solid #cfcfcf;background:white}
   button{cursor:pointer}
-  video{width:100%;max-width:560px;border-radius:8px;background:#000;margin-top:10px}
-  .controls{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px}
-  .note{font-size:0.85rem;color:#666;margin-top:6px}
-  .panel{max-width:760px}
-  canvas{width:100%;max-width:560px;height:120px;background:#111;border-radius:8px;margin-top:8px}
-  .meter-bar{width:200px;height:20px;border-radius:6px;background:#eee;overflow:hidden;position:relative}
-  .meter-bar>.fill{position:absolute;left:0;top:0;height:100%;width:0;background:linear-gradient(90deg,#4caf50,#ffeb3b)}
-  audio{display:block;margin-top:10px}
+  video{width:100%;max-width:560px;border-radius:8px;background:#000}
+  .controls{display:flex;gap:8px;flex-wrap:wrap}
+  .meter{width:200px;height:24px;border-radius:6px;background:#eee;overflow:hidden;position:relative}
+  .meter>.level{position:absolute;left:0;top:0;height:100%;width:0;background:linear-gradient(90deg,#4caf50,#ffeb3b)}
+  .panel{margin-top:12px;max-width:760px}
+  .small{font-size:0.9rem;color:#444}
+  .note{font-size:0.85rem;color:#666;margin-top:8px}
+  audio{display:block;margin-top:8px}
+  .timer{padding:6px 8px;border-radius:6px;background:#fff;border:1px solid #ddd;min-width:60px;text-align:center}
 </style>
 </head>
 <body>
-<h1>Kiểm tra Camera & Micro (có sóng âm động)</h1>
+  <h1>Trang kiểm tra Camera & Micro (Web)</h1>
 
-<div class="panel">
-  <div>
-    <label>Camera:
-      <select id="cameraSelect"></select>
-    </label>
-    <label>Micro:
-      <select id="micSelect"></select>
-    </label>
-    <button id="startPreviewBtn">Bắt đầu Preview</button>
-    <button id="stopPreviewBtn" disabled>Ngưng Preview</button>
+  <div class="panel">
+    <div class="row">
+      <label>Camera:
+        <select id="cameraSelect"></select>
+      </label>
+
+      <label>Micro:
+        <select id="micSelect"></select>
+      </label>
+
+      <div style="display:flex;align-items:center;gap:8px">
+        <button id="startPreviewBtn">Bắt đầu Preview</button>
+        <button id="stopPreviewBtn" disabled>Ngưng Preview</button>
+      </div>
+    </div>
+
+    <video id="videoPreview" playsinline autoplay muted></video>
+    <div class="note">⚠️ Trình duyệt có thể yêu cầu quyền truy cập camera/micro. Trên iOS, hãy dùng Safari/Chrome và truy cập trang HTTPS.</div>
+
+    <hr />
+
+    <div class="row" style="align-items:center">
+      <div class="small">Mức âm thanh (micro):</div>
+      <div class="meter"><div class="level" id="meterLevel"></div></div>
+      <div class="timer" id="levelDb">— dB</div>
+    </div>
+
+    <div class="controls">
+      <button id="startRecBtn">Bắt đầu Ghi âm</button>
+      <button id="stopRecBtn" disabled>Ngưng Ghi</button>
+      <button id="playRecBtn" disabled>Phát Lại</button>
+      <a id="downloadLink" style="padding:8px;border-radius:6px;text-decoration:none;border:1px solid #cfcfcf;background:#fff;color:#111" download="recording.webm">Tải về</a>
+      <div id="recTimer" class="timer">00:00</div>
+    </div>
+
+    <audio id="playback" controls></audio>
+
+    <div class="note">Kết quả ghi âm có thể phát lại hoặc tải về. Một số trình duyệt di động chỉ cho phát khi có thao tác người dùng.</div>
   </div>
-
-  <video id="videoPreview" autoplay playsinline muted></video>
-  <canvas id="waveCanvas"></canvas>
-  <div class="note">Nói vào micro để thấy sóng chuyển động theo âm thanh thực.</div>
-
-  <div class="controls">
-    <button id="startRecBtn">Bắt đầu Ghi âm</button>
-    <button id="stopRecBtn" disabled>Ngưng Ghi</button>
-    <button id="playRecBtn" disabled>Phát lại</button>
-    <a id="downloadLink" download="recording.webm" style="padding:8px;border:1px solid #ccc;border-radius:6px;background:#fff;text-decoration:none;color:#111">Tải về</a>
-  </div>
-
-  <audio id="playback" controls></audio>
-</div>
 
 <script>
 (async function(){
@@ -62,137 +71,138 @@
   const startPreviewBtn=document.getElementById('startPreviewBtn');
   const stopPreviewBtn=document.getElementById('stopPreviewBtn');
   const videoPreview=document.getElementById('videoPreview');
-  const waveCanvas=document.getElementById('waveCanvas');
+  const meterLevel=document.getElementById('meterLevel');
+  const levelDb=document.getElementById('levelDb');
   const startRecBtn=document.getElementById('startRecBtn');
   const stopRecBtn=document.getElementById('stopRecBtn');
   const playRecBtn=document.getElementById('playRecBtn');
   const downloadLink=document.getElementById('downloadLink');
   const playback=document.getElementById('playback');
+  const recTimer=document.getElementById('recTimer');
 
   let currentStream=null;
-  let audioCtx=null;
+  let audioContext=null;
   let analyser=null;
-  let waveAnim=null;
+  let rafId=null;
   let mediaRecorder=null;
-  let chunks=[];
-  let waveSource=null;
+  let recordedChunks=[];
+  let recTimerInterval=null;
+  let recordingStart=null;
 
-  const ctx=waveCanvas.getContext('2d');
-  function drawWave(){
-    if(!analyser) return;
-    const bufferLength=analyser.fftSize;
-    const dataArray=new Uint8Array(bufferLength);
-    function draw(){
-      analyser.getByteTimeDomainData(dataArray);
-      ctx.fillStyle="#111";
-      ctx.fillRect(0,0,waveCanvas.width,waveCanvas.height);
-      ctx.lineWidth=2;
-      ctx.strokeStyle="#4caf50";
-      ctx.beginPath();
-      const sliceWidth=waveCanvas.width/bufferLength;
-      let x=0;
-      for(let i=0;i<bufferLength;i++){
-        const v=dataArray[i]/128.0;
-        const y=v*waveCanvas.height/2;
-        if(i===0) ctx.moveTo(x,y);
-        else ctx.lineTo(x,y);
-        x+=sliceWidth;
-      }
-      ctx.lineTo(waveCanvas.width,waveCanvas.height/2);
-      ctx.stroke();
-      waveAnim=requestAnimationFrame(draw);
-    }
-    draw();
-  }
-
-  function stopWave(){
-    if(waveAnim) cancelAnimationFrame(waveAnim);
-    ctx.fillStyle="#111";
-    ctx.fillRect(0,0,waveCanvas.width,waveCanvas.height);
-  }
-
-  async function updateDevices(){
+  async function updateDeviceList(){
     const devices=await navigator.mediaDevices.enumerateDevices();
     const cams=devices.filter(d=>d.kind==='videoinput');
     const mics=devices.filter(d=>d.kind==='audioinput');
-    cameraSelect.innerHTML=cams.map(c=>`<option value="${c.deviceId}">${c.label||'Camera '+(cams.indexOf(c)+1)}</option>`).join('');
-    micSelect.innerHTML=mics.map(m=>`<option value="${m.deviceId}">${m.label||'Micro '+(mics.indexOf(m)+1)}</option>`).join('');
+    cameraSelect.innerHTML=cams.map(c=>`<option value="${c.deviceId}">${c.label||'Camera '+(cams.indexOf(c)+1)}</option>`).join('')||'<option>(Không có camera)</option>';
+    micSelect.innerHTML=mics.map(m=>`<option value="${m.deviceId}">${m.label||'Micro '+(mics.indexOf(m)+1)}</option>`).join('')||'<option>(Không có micro)</option>';
   }
 
   async function startPreview(){
     stopPreview();
     const constraints={
-      video:{deviceId:cameraSelect.value?{exact:cameraSelect.value}:undefined},
-      audio:{deviceId:micSelect.value?{exact:micSelect.value}:undefined}
+      video:cameraSelect.value?{deviceId:{exact:cameraSelect.value}}:{facingMode:'user'},
+      audio:micSelect.value?{deviceId:{exact:micSelect.value}}:true
     };
     try{
       currentStream=await navigator.mediaDevices.getUserMedia(constraints);
       videoPreview.srcObject=currentStream;
       videoPreview.muted=true;
+      await videoPreview.play().catch(()=>{});
       stopPreviewBtn.disabled=false;
-
-      audioCtx=new (window.AudioContext||window.webkitAudioContext)();
-      analyser=audioCtx.createAnalyser();
-      analyser.fftSize=1024;
-      waveSource=audioCtx.createMediaStreamSource(currentStream);
-      waveSource.connect(analyser);
-      drawWave();
-      await updateDevices();
-    }catch(e){
-      alert("Không thể truy cập camera/mic: "+e.message);
-    }
+      setupAudioMeter(currentStream);
+      await updateDeviceList();
+    }catch(e){alert('Không thể truy cập camera/mic: '+e.message);}
   }
 
   function stopPreview(){
     if(currentStream){currentStream.getTracks().forEach(t=>t.stop());currentStream=null;}
-    if(audioCtx){audioCtx.close();audioCtx=null;}
-    analyser=null;
-    stopWave();
+    videoPreview.srcObject=null;
+    disconnectAudioMeter();
     stopPreviewBtn.disabled=true;
   }
 
-  function startRecording(){
-    if(!micSelect.value){alert("Chưa chọn micro!");return;}
-    navigator.mediaDevices.getUserMedia({audio:{deviceId:{exact:micSelect.value}}})
-      .then(stream=>{
-        chunks=[];
-        mediaRecorder=new MediaRecorder(stream);
-        mediaRecorder.ondataavailable=e=>{if(e.data.size>0)chunks.push(e.data);}
-        mediaRecorder.onstop=()=>{
-          const blob=new Blob(chunks,{type:'audio/webm'});
-          const url=URL.createObjectURL(blob);
-          playback.src=url;
-          playRecBtn.disabled=false;
-          downloadLink.href=url;
-        };
-        mediaRecorder.start();
-        startRecBtn.disabled=true;
-        stopRecBtn.disabled=false;
+  function setupAudioMeter(stream){
+    disconnectAudioMeter();
+    const audioTracks=stream.getAudioTracks();
+    if(!audioTracks.length)return;
+    audioContext=new (window.AudioContext||window.webkitAudioContext)();
+    const source=audioContext.createMediaStreamSource(new MediaStream(audioTracks));
+    analyser=audioContext.createAnalyser();
+    analyser.fftSize=1024;
+    source.connect(analyser);
+    const data=new Uint8Array(analyser.fftSize);
+    function update(){
+      analyser.getByteTimeDomainData(data);
+      let sum=0;
+      for(let i=0;i<data.length;i++){const v=(data[i]-128)/128;sum+=v*v;}
+      const rms=Math.sqrt(sum/data.length);
+      const db=(20*Math.log10(rms||1e-8)).toFixed(1);
+      const pct=Math.min(100,Math.max(0,rms*300));
+      meterLevel.style.width=pct+'%';
+      levelDb.textContent=db+' dB';
+      rafId=requestAnimationFrame(update);
+    }
+    update();
+  }
 
-        // visual from recording stream
-        audioCtx=new (window.AudioContext||window.webkitAudioContext)();
-        analyser=audioCtx.createAnalyser();
-        analyser.fftSize=1024;
-        waveSource=audioCtx.createMediaStreamSource(stream);
-        waveSource.connect(analyser);
-        drawWave();
-      }).catch(err=>alert("Không thể ghi âm: "+err.message));
+  function disconnectAudioMeter(){
+    if(rafId)cancelAnimationFrame(rafId);
+    rafId=null;
+    if(analyser)analyser.disconnect();
+    analyser=null;
+    if(audioContext){audioContext.close();audioContext=null;}
+    meterLevel.style.width='0%';
+    levelDb.textContent='— dB';
+  }
+
+  function startRecording(){
+    navigator.mediaDevices.getUserMedia({audio:{deviceId:micSelect.value?{exact:micSelect.value}:undefined}})
+    .then(stream=>{
+      recordedChunks=[];
+      const options={mimeType:MediaRecorder.isTypeSupported('audio/webm;codecs=opus')?'audio/webm;codecs=opus':'audio/webm'};
+      mediaRecorder=new MediaRecorder(stream,options);
+      mediaRecorder.ondataavailable=e=>{if(e.data.size>0)recordedChunks.push(e.data);};
+      mediaRecorder.onstop=()=>{
+        const blob=new Blob(recordedChunks,{type:recordedChunks[0]?.type||'audio/webm'});
+        const url=URL.createObjectURL(blob);
+        playback.src=url;
+        playRecBtn.disabled=false;
+        downloadLink.href=url;
+        downloadLink.download='recording.webm';
+        stream.getTracks().forEach(t=>t.stop());
+      };
+      mediaRecorder.start();
+      recordingStart=Date.now();
+      recTimer.textContent='00:00';
+      recTimerInterval=setInterval(()=>{
+        const s=Math.floor((Date.now()-recordingStart)/1000);
+        const mm=String(Math.floor(s/60)).padStart(2,'0');
+        const ss=String(s%60).padStart(2,'0');
+        recTimer.textContent=`${mm}:${ss}`;
+      },500);
+
+      startRecBtn.disabled=true;
+      stopRecBtn.disabled=false;
+      playRecBtn.disabled=true;
+    })
+    .catch(err=>alert('Không thể ghi âm: '+err.message));
   }
 
   function stopRecording(){
-    if(mediaRecorder && mediaRecorder.state!=='inactive') mediaRecorder.stop();
-    stopRecBtn.disabled=true;
+    if(mediaRecorder && mediaRecorder.state!=='inactive')mediaRecorder.stop();
+    if(recTimerInterval){clearInterval(recTimerInterval);recTimerInterval=null;}
     startRecBtn.disabled=false;
-    if(audioCtx) audioCtx.close();
-    stopWave();
+    stopRecBtn.disabled=true;
   }
 
+  playRecBtn.onclick=()=>playback.play().catch(()=>{});
   startPreviewBtn.onclick=startPreview;
   stopPreviewBtn.onclick=stopPreview;
   startRecBtn.onclick=startRecording;
   stopRecBtn.onclick=stopRecording;
-  playRecBtn.onclick=()=>playback.play();
-  await updateDevices();
+
+  navigator.mediaDevices.addEventListener('devicechange',updateDeviceList);
+  await updateDeviceList();
 })();
 </script>
 </body>
